version 1.2.0 release